--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/extension-accelerate": "^2.0.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cookie": "^1.0.2",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
